k8s/apps/webserver/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxdeployment
  template:
    metadata:
      labels:
        app: nginxdeployment
    spec:
      containers:
      - image: ghcr.io/home-assistant/home-assistant:stable
        name: nginxdeployment
        ports:
        - containerPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
  type: NodePort
  selector:
    app: nginxdeployment
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8080
